[package]
name = "pyemd-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyemd_rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl-static"] }
numpy = "0.24"
pyo3 = { version = "0.24", features = ["anyhow"] }
